--- a/lab3Tables.html
+++ b/lab3Tables.html
@@ -20,14 +20,14 @@
     <nav>
         <h2 class="sr-only">Main Navigation</h2>
         <div class="dropdown">
-            <button class="dropdownButton"Dropdown>
+            <button class="dropdownButton" aria-label="Dropdown">
                 <span class="material-icons">expand_more</span>
             </button>
             <ul class="dropdownContent">
-                <li><a href="#Header">(Top)</a><span aria-hidden=”true” class="material-icons">arrow_upward</span></li>
-                <li><a href="#introForm">Intro Form</a><span aria-hidden=”true” class="material-icons">start</span></li>
-                <li><a href="#introParagraph">Learn more about the games story</a><span aria-hidden=”true” class="material-icons">auto_stories</span></li>
-                <li><a href="#theSevenNations">The Seven Nations</a><span aria-hidden=”true” class="material-icons">public</span></li>
+                <li><a href="#Header">(Top)</a><span hidden class="material-icons">arrow_upward</span></li>
+                <li><a href="#introForm">Intro Form</a><span hidden class="material-icons">start</span></li>
+                <li><a href="#introParagraph">Learn more about the games story</a><span hidden class="material-icons">auto_stories</span></li>
+                <li><a href="#theSevenNations">The Seven Nations</a><span hidden class="material-icons">public</span></li>
             </ul>
         </div>
       </nav>
@@ -35,6 +35,7 @@
     <main>
 
     <section id="introForm">
+        <h2>Intro Form</h2>
         <form id="myform" method="post">
             <fieldset>
                 <legend>Tell me a bit about yourself</legend>
@@ -62,7 +63,7 @@
 
     <section id="introParagraph">
         <h2>Learn more about the games story</h2>
-        <span aria-hidden=”true” class="material-icons">auto_stories</span>
+        <span hidden class="material-icons">auto_stories</span>
         
         <p>
             Genshin Impact takes place in the world of Teyvat, composed of seven major nations, each of which is ruled by a different god called an 
@@ -76,7 +77,7 @@
 
     <section id="theSevenNations">
         <h2>The Seven Nations</h2>
-        <span aria-hidden=”true” class="material-icons">public</span>
+        <span hidden class="material-icons">public</span>
 
         <p>
             TBA stands for "To be announced". Currently within the game we are in the Fontaine point of the story. Therefore, details about the nations 
