final edit before validation

--- a/lab4AcessibleCSS.html
+++ b/lab4AcessibleCSS.html
@@ -133,25 +133,21 @@
 
         <aside id="aside1">
             <figure>
-                <img src="./img/fuxuanTransparent.png" alt="anime girl with her back turned looking over her shoulder. she holds a gongshan. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanTransparent.png" alt="anime girl. she holds a gongshan. she has pale skin and pink hair.">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanSplashZoom.png" alt="anime girl with her hand raised towards the sky. there's a starry purple background behind her.
-                she's surrounded by long scrolls that have chinese calligraphy on them. her hair is done in a traditional chinese style. she has pale skin, 
-                pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanSplashZoom.png" alt="anime girl with her hand raised towards the sky. she has pale skin and 
+                pink hair.">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanArt1.png" alt="illustration done by Sheya on Pixiv. anime girl facing the viewer. above her raised hand floats a black and yellow magic orb. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes. hte background is a starry blue purple with various scrolls dangling
-                down. the scrolls have purple chinese calligraphy on them.">
+                <img src="./img/fuxuanArt1.png" alt="illustration done by Sheya on Pixiv. anime girl facing the viewer. she has pale skin and pink hair.">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanArt2.png" alt="art by Buttonniukoukou on twitter. anime girl sitting on her knees, outstretching her arms. another version of the same girl
-                is behind her, holding a magical purple orb in her hands. her hair is done in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanArt2.png" alt="art by Buttonniukoukou on twitter. anime girl sitting on her knees. another version of the same girl
+                is behind her.">
             </figure>
 
         </aside>
@@ -159,23 +155,19 @@
         <aside id="aside2">
 
             <figure>
-                <img src="./img/fuxuanArt3.png" alt="anime girl turning towards the camera. the background is a starry purple sky with a white glow emerging from her feet. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanArt3.png" alt="anime girl turning towards the camera. she has pale skin and pink hair.">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanGameScreenshot1.png" alt="anime girl holding a ball of pink energy towards the camera. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and her eyes are closed.">
+                <img src="./img/fuxuanGameScreenshot1.png" alt="anime girl holding a ball of pink energy towards the camera. her eyes are closed.">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanOfficialArt1.png" alt="anime girl faching the viewer. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanOfficialArt1.png" alt="anime girl faching the viewer. she has pale skin and pink hair..">
             </figure>
 
             <figure>
-                <img src="./img/fuxuanOfficialArt2.png" alt="anime girl looking towards the left. her hair is done 
-                in a traditional chinese style. she has pale skin, pink hair, and amber yellow eyes.">
+                <img src="./img/fuxuanOfficialArt2.png" alt="anime girl looking towards the left. she has pale skinand pink hair.">
             </figure>
 
         </aside>
