clearing validator errors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-      <small>Site created by lily <address>liba8321@colorado.edu</address></small>
+      Site created by lily <address>liba8321@colorado.edu</address>
       <small>&copy; 2023</small>
     </footer>
 
