more nav testing for mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
       <p>
         In my free time, 
-        I love playing video games, playing Dungeons and Dragons, and drawing. I'm a freelance digital artist, and I 
+        I love playing video games, playing Dungeons and Dragons, and drawing. My favorite game is Genshin Impact, but 
+        I also play Honkai Star Rail, Reverse 1999 and Twisted Wonderland. I'm a freelance digital artist, and I 
         often draw fan art for my favorite series! 
       </p>
 
