fiddling with nav again

--- a/indexPages/favoriteProject.html
+++ b/indexPages/favoriteProject.html
@@ -51,7 +51,7 @@
       </p>
 
       <figure>
-        <img src="../img/project3dimension.jpg" alt="pink and white milk carton with cartoon cow">
+        <img class="fullBleedImg" src="../img/project3dimension.jpg" alt="pink and white milk carton with cartoon cow">
       </figure>
 
       <p>
@@ -68,11 +68,11 @@
       </p>
 
       <figure>
-        <img src="../img/colorsandMoodMoodboard.jpg" alt="collage of pink, girly images">
+        <img class="fullBleedImg" src="../img/colorsandMoodMoodboard.jpg" alt="collage of pink, girly images">
       </figure>
 
       <figure>
-        <img src="../img/packagingMoodBoard.jpg" alt="collage of cute, simplistic food packaging">
+        <img class="fullBleedImg" src="../img/packagingMoodBoard.jpg" alt="collage of cute, simplistic food packaging">
       </figure>
 
       <p>
@@ -86,11 +86,11 @@
       </p>
 
       <figure>
-        <img src="../img/content1.jpg" alt="pink text, mascot and color pallette">
+        <img class="fullBleedImg" src="../img/content1.jpg" alt="pink text, mascot and color pallette">
       </figure>
 
       <figure>
-        <img src="../img/content2.jpg" alt="pink text and nutritional labels">
+        <img class="fullBleedImg" src="../img/content2.jpg" alt="pink text and nutritional labels">
       </figure>
 
       <p>
@@ -104,7 +104,7 @@
       </p>
 
       <figure>
-        <img src="../img/diecut.jpg" alt="pink and white milk carton laid flat with fold lines">
+        <img class="fullBleedImg" src="../img/diecut.jpg" alt="pink and white milk carton laid flat with fold lines">
       </figure>
 
     </main>
