--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <li>
           <a href="indexPages/favoriteProject.html">Favorite Project</a>
         </li>
-          
+        <li>
+          <a href="../UDhomepage.html">Final Project</a>
+        </li> 
       </ul>
     </nav>
 
