--- a/indexPages/lab4.html
+++ b/indexPages/lab4.html
@@ -38,7 +38,9 @@
         <li>
           <a href="favoriteProject.html">Favorite Project</a>
         </li>
-          
+        <li>
+          <a href="../UDhomepage.html">Final Project</a>
+        </li> 
       </ul>
     </nav>
 
