im just committing it so i feel like i made progress.

--- a/accessibility.html
+++ b/accessibility.html
@@ -21,9 +21,7 @@
                 <li><a href="languageofDesign.html">Language of Design</a></li>
                 <li><a href="interactionDesignInfo.html">Interaction Design & Information</a></li>
                 <li><a href="introWebStandards.html">Intro to Web Standards</a></li>
-                <li><a href="codingMetaData.html">Coding and Meta Data</a></li>
-                <li><a href="structureSemantics.html">Structure and Semantics</a></li>
-                <li><a href="tablesScreenReaders.html">Tables and Screen Readers</a></li>
+                <li><a href="codingMetaData.html">Coding and Meta Data: Tables and Forms</a></li>
                 <li><a href="cssResponsive.html">CSS Responsive Layout</a></li>
                 <li><a href="accessibility.html">Accessiblity</a></li>
             </ul>
@@ -32,9 +30,41 @@
 
           <main id="accessibility">
             <h2>Accessibility</h2>
+
+            <h3>Accessibility Evaluation Tools</h3>
       
             <p>
-              Placeholder for furture information
+              There are tons of great tools out there that can help you evaluate webpage accessibility. In our class, we frequently use the web browser extension WAVE 
+              from WebAIM, which checks your website for errors and contrast errors. It helps you ensure that your website is properly outlined, and will point out 
+              things like if your alt descriptions for images are too long! 
+            </p>
+
+            <p>
+              HTML outliners are also great tools to check if your page is all properly outlined. We use Web Developer, another web browser extension (which also has a 
+              ton of other useful features), to check this. 
+            </p>
+
+            <p>
+              Making use of the HTML nu validator is also a great step! It will check through your website and point out any missteps in your code that could lead to 
+              lack of accessibility. 
+            </p>
+
+            <p>
+              Also, make sure to aquaint yourself with the WCAG 2.1 Section 508 guidelines, which will help you know what to look out for when coding. 
+            </p>
+
+            <h3>The Mobile Web</h3>
+
+            <p>
+              For many people, the only access they have to the internet is through mobile devices, such as phones and tablets. This makes it essential that your code works 
+              on both mobile and PC. Your layout should be clear on mobile. Make sure that anything tappable is large enough for the user to tap. Keep in mind that some disabled 
+              users may have physical disabilties involving hand tremors, which makes this all the more essential. 
+            </p>
+
+            <p>
+              The importance of mobile web cannot be understated. Many developers are moving towards "mobile first" design, where you first code your website for mobile, and 
+              then adapt it for desktop. This ensures a smooth mobile experience for all users. All of the tennants of web accessibility apply to your mobile designs, so 
+              keep that in mind!
             </p>
       
           </main>
