--- a/cssResponsive.html
+++ b/cssResponsive.html
@@ -21,9 +21,7 @@
                 <li><a href="languageofDesign.html">Language of Design</a></li>
                 <li><a href="interactionDesignInfo.html">Interaction Design & Information</a></li>
                 <li><a href="introWebStandards.html">Intro to Web Standards</a></li>
-                <li><a href="codingMetaData.html">Coding and Meta Data</a></li>
-                <li><a href="structureSemantics.html">Structure and Semantics</a></li>
-                <li><a href="tablesScreenReaders.html">Tables and Screen Readers</a></li>
+                <li><a href="codingMetaData.html">Coding and Meta Data: Tables and Forms</a></li>
                 <li><a href="cssResponsive.html">CSS Responsive Layout</a></li>
                 <li><a href="accessibility.html">Accessiblity</a></li>
             </ul>
@@ -34,7 +32,24 @@
             <h2>CSS Responsive Layout</h2>
       
             <p>
-              Placeholder for furture information
+              The two key components of CSS response layouts are CSS grids and CSS flexbox. Lets start with the CSS grid!
+            </p>
+
+            <p>
+              The CSS grid changed the game for me with coding (because, embarrassingly enough, I had never learned it before). Put super simply, you make a grid using 
+              CSS, and then you assign certain elements to that grid. For example, you can list out a grid and label the top portion of that grid "header", then asign 
+              your header to that space. It's a super simple way to lay out a webpage, and its accessible. 
+            </p>
+
+            <p>Chris Coyier has an excellent guide on it, with incredibly helpful pictures, <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">here</a>.</p>
+
+            <p>
+              CSS flexbox is hard to describe with words. It's a bit like a responsive container that will lay out items within it in a specified way. Again I must defer 
+              to Chris Coyier's guide on CSS flexbox, which has excellent pictures that explain this concept far better than words. 
+            </p>
+
+            <p>
+              Check it out <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">here</a>.
             </p>
       
           </main>
