--- a/introWebStandards.html
+++ b/introWebStandards.html
@@ -21,9 +21,7 @@
                 <li><a href="languageofDesign.html">Language of Design</a></li>
                 <li><a href="interactionDesignInfo.html">Interaction Design & Information</a></li>
                 <li><a href="introWebStandards.html">Intro to Web Standards</a></li>
-                <li><a href="codingMetaData.html">Coding and Meta Data</a></li>
-                <li><a href="structureSemantics.html">Structure and Semantics</a></li>
-                <li><a href="tablesScreenReaders.html">Tables and Screen Readers</a></li>
+                <li><a href="codingMetaData.html">Coding and Meta Data: Tables and Forms</a></li>
                 <li><a href="cssResponsive.html">CSS Responsive Layout</a></li>
                 <li><a href="accessibility.html">Accessiblity</a></li>
             </ul>
@@ -34,13 +32,22 @@
             <h2>Intro to Web Standards</h2>
       
             <p>
-              Placeholder for furture information
+              Ever looked at code and saw a bloated mess of a million divs? Web standards seek to avoid this coding nightmare. Using web standards when coding will make clean, 
+              clear websites. This is important for screen readers, so that users can figure out what section their in! On the end of the designer and/or developer, this is 
+              nice too. You can actually parse whats happening and what section your in when your reading someone elses code. 
             </p>
 
-            <h2 id="HTMLCoding">HTML Coding</h2>
+            <h3 id="HTMLCoding">HTML Coding</h3>
 
             <p>
-                Placeholder for future information
+                This guide assumes you know the basics of coding with HTML and CSS, so I won't go in depth with that. Just know that the head needs to contain a title, 
+                language, etc. (vscode does this for you automatically). Also remember that your body must have structure! Make sure all your sections are labeled, and 
+                that you have headings for everything that needs headings. 
+            </p>
+
+            <p>
+              Rather than me explaining web standards in depth, I would rather point you to good resources. Check out WAI's website, the aforementioned 
+              <i>Universal Design for Digital Media</i>, and Mozilla's developer website!
             </p>
       
           </main>
