--- a/languageofDesign.html
+++ b/languageofDesign.html
@@ -21,9 +21,7 @@
                 <li><a href="languageofDesign.html">Language of Design</a></li>
                 <li><a href="interactionDesignInfo.html">Interaction Design & Information</a></li>
                 <li><a href="introWebStandards.html">Intro to Web Standards</a></li>
-                <li><a href="codingMetaData.html">Coding and Meta Data</a></li>
-                <li><a href="structureSemantics.html">Structure and Semantics</a></li>
-                <li><a href="tablesScreenReaders.html">Tables and Screen Readers</a></li>
+                <li><a href="codingMetaData.html">Coding and Meta Data: Tables and Forms</a></li>
                 <li><a href="cssResponsive.html">CSS Responsive Layout</a></li>
                 <li><a href="accessibility.html">Accessiblity</a></li>
             </ul>
@@ -32,9 +30,84 @@
 
           <main id="languageofDesign">
             <h2>The Language of Design</h2>
-      
+
+            <h3>Norman's Design Concepts</h3>
+
             <p>
-              Placeholder for furture information
+              Norman's design principles, from the book <i>The Design of Everyday Things</i>, are a great broad brush that we can use to understand 
+              the basic principles of how we go about designing things that are universally usable. Design is first and foremost about functionality, 
+              think about what your design is communicating to the user, and how it communicates!
+            </p>
+
+            <p>
+              Below I've listed out Norman's design principles, with abbreviated versions of their overall meanings. I highly reccommend reading the book 
+              yourself for a more indepth approach. You can also check out <i>Universal Design for Digital Media</i> by Howard Kramer for a less abbreviated 
+              summary.
+            </p>
+
+            <ul>
+              <li><b>Visibility:</b> The more visible an element is, the more likely users will know about it and how to use it. The opposite is also true!</li>
+              <li>
+                <b>Feedback:</b> Make it clear to the user when an action has been taken and what has been accomplished. This can be achieved through visual, tactile, 
+                audio and more!
+              </li>
+              <li>
+                <b>Constraints:</b> Limit the range of possible interactions for the user to simplify the interface and guide the user to the next appropriate action.
+              </li>
+              <li>
+                <b>Mapping:</b> Create a clear relationship between the controls and the effect they have on the world. This is one of the more difficult concepts to understand 
+                with words alone. Think about a stovetop; place the controls in a way where the user can understand which dial turns out which burner. Instead of laying 
+                them out in a straight line, lay them out in the same scheme as the burners!
+              </li>
+              <li>
+                <b>Consistency:</b> Have similar operations and similar elements for achieving similar tasks! Also use menus and layouts that users are familiar with from other 
+                websites. Utilize the language that the web has created. 
+              </li>
+              <li>
+                <b>Affordance:</b> Give your designed objects attributes that let the user know how to use that attribute. For example, a door handle should have a 
+                area that looks like it can be pulled, but when pushing a door present a bar or other pushable object instead. 
+              </li>
+            </ul>
+
+            <h3>Identifying Norman's Design Concepts on the Web</h3>
+
+            <p>
+              Generally, you want to make sure that everything you have your user do is simple, well mapped, and easy to understand. If you need the user to do a more complex 
+              task, break it down into simpler tasks first. Make sure that the user understands where their going on your website and how to do a task there. Remember to make it 
+              difficult or impossible to do things that the user shouldn't be doing; code for mistakes. 
+            </p>
+
+            <p>
+              Remember not to overautomate as well! Give your user a sense of autonomy, so they can choose where to go and how to get there. This is a hard balance to strike, 
+              but an important one. 
+            </p>
+
+            <h3>The History of the Web and Web Design</h3>
+
+            <p>
+              To understand how to be good web designers today, understanding the history of web design is important. What decisions and events led to the web we know today? 
+              How can we move forward without repeating the mistakes of our past, and replicating the positives? 
+            </p>
+
+            <p>
+              The web used to be a "wild west" of sorts when it came to the ways that websites were built. While this was somethign that allowed for a deluge of creative 
+              digital art through web, it also raised concerns of accessiblity and usability, especially when these websites were meant to me usable rather than artistic 
+              expression.
+            </p>
+
+            <p>
+              In 1998, Internet Explorer 5 released a new proprietary dynamic HTML, and this necessitated web standards for web developers and designers. WaSP (Web Standards 
+              Project) was formed to address this need. This group ridiculed companies that were a part of the W3C (World Wide Web Consortium) and didn't follow web standards, 
+              instead breaking the rules for their own gain. 
+            </p>
+
+            <p>
+              Eventually, we reached a point where much of the web is standardized, but we still have much work to do to make our websites accessible from the jump for all users. 
+            </p>
+
+            <p>
+              We've learned from these trailblazers what a good web design needs. Clear layouts, strong mapping, and easy to navigate simplistic front pages are all 
+              essential. This ties into Norman's design principles! Usable websites are a must!
             </p>
       
           </main>
