fixed the issue...

--- a/accessibility.html
+++ b/accessibility.html
@@ -15,7 +15,7 @@
         <a class="skip-link" href="#accessibility">Skip to main content</a>
 
         <input aria-label="mobile menu bar" class="side-menu" type="checkbox" id="side-menu"/>
-        <label ariah label="mobile menu bar" class="hamb" for="side-menu"><span class="hamb-line">menu ↓</span></label>
+        <label aria-label="mobile menu bar" class="hamb" for="side-menu"><span class="hamb-line">menu ↓</span></label>
         
     <nav class="nav">
       <ul class="menu" id="navMenu">
