noticed an issue with menu on mobile

--- a/indexPages/finalProject.html
+++ b/indexPages/finalProject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 4 Page</title>
+  <title>Universal Design Final Project</title>
   <link href="../css/index.css" rel="stylesheet">
   <script src="../js/index.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header>
-      <a class="skip-link" href="#lab4Intro">Skip to main content</a>
+      <a class="skip-link" href="#lab2Intro">Skip to main content</a>
       <h1>Lily's Homepage</h1>
     </header>
 
@@ -25,7 +25,7 @@
           <a href="favoriteProject.html">Favorite Project</a>
         </li>
         <li>
-          <a href="finalProject.html">Final Project</a>
+          <a href="#UDfinalProject">Final Project</a>
         </li> 
         <li>
           <button type="button" aria-expanded="true" aria-controls="id_lab_menu">Labs</button>
@@ -37,34 +37,30 @@
               <a href="lab3.html">Lab #3</a>
             </li>
             <li>
-              <a href="#lab4Intro">Lab #4</a>
+              <a href="lab4.html">Lab #4</a>
             </li>
           </ul>
         </li>
-   
+       
       </ul>
     </nav>
 
-    <main id="lab4Intro" class="lab4IntroPageContent" tabindex="-1" role="region">
-      <h2 class="normalHeader">Lab 4: Accessible CSS Layout</h2>
+    <main id="UDfinalProject" class="UDfinalProjectContent" tabindex="-1" role="region">
+      <h2 class="normalHeader">Universal Design Final Project</h2>
 
       <p>
-        For this project, we were tasked with creating an accessible CSS grid layout. This was my first time ever 
-        learning about and using an accessible CSS grid layout, as my last web class was mostly self taught. I found 
-        this method extremely useful! This totally changed the game for me when it came to making webpage layouts and 
-        made a lot of things make sense.
-      </p>
-
-      <p>
-        I also learned a lot from my mistakes in this lab. I didn't know it was bad practice to create two navs (I did this 
-        for layout purposes), and I didn't know you had to label any image sections you had. 
+        I'm happy with how my final project turned out. I believe that there could be a lot of things I improved on, but 
+        I'm glad to have a functioning product with a working, nu validator error free, nav system. There's a lot of things 
+        that I would love to improve if I had more time, including the design. I think this website is even more 
+        minimalistic than I had initially planned. I also think that I could make the nav system even more fluid, and style some
+        things better. But overall, I'm proud I finished. 
       </p>
 
       <p>
         Check out the project yourself below:  
       </p>
 
-      <a href="https://lilybattin.me/lilysUniversalDesignWebsite/lab4AcessibleCSS" class="normalLink">Link to Lab 4</a>
+      <a href="https://lilybattin.me/lilysUniversalDesignWebsite/UDhomepage" class="normalLink">Link to Universal Design final website.</a>
 
     </main>
 
