--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="indexPages/favoriteProject.html">Favorite Project</a>
         </li>
         <li>
-          <a href="../UDhomepage.html">Final Project</a>
+          <a href="indexPages/finalProject.html">Final Project</a>
         </li>
         <li>
           <button type="button" aria-expanded="true" aria-controls="id_lab_menu">Labs</button>
