--- a/indexPages/lab2.html
+++ b/indexPages/lab2.html
@@ -25,7 +25,7 @@
           <a href="favoriteProject.html">Favorite Project</a>
         </li>
         <li>
-          <a href="../UDhomepage.html">Final Project</a>
+          <a href="finalProject.html">Final Project</a>
         </li> 
         <li>
           <button type="button" aria-expanded="true" aria-controls="id_lab_menu">Labs</button>
