clearing one of the errors in nu for class portal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="aboutMe" class="aboutMePageContent" tabindex="-1" role="region">
+    <main id="aboutMe" class="aboutMePageContent" role="region">
       <h2>About Me</h2>
 
       <figure>
