--- a/indexPages/lab2.html
+++ b/indexPages/lab2.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="lab2Intro" class="lab2IntroPageContent" tabindex="-1" role="region">
+    <main id="lab2Intro" class="lab2IntroPageContent" role="region">
       <h2 class="normalHeader">Lab 2: Coding & Posting a Web Page - The Basics</h2>
 
       <p>
