--- a/indexPages/lab4.html
+++ b/indexPages/lab4.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="lab4Intro" class="lab4IntroPageContent" tabindex="-1" role="region">
+    <main id="lab4Intro" class="lab4IntroPageContent" role="region">
       <h2 class="normalHeader">Lab 4: Accessible CSS Layout</h2>
 
       <p>
