--- a/indexPages/lab3.html
+++ b/indexPages/lab3.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="lab3Intro" class="lab3IntroPageContent" tabindex="-1" role="region">
+    <main id="lab3Intro" class="lab3IntroPageContent" role="region">
       <h2 class="normalHeader">Lab 3: Tables, Forms, Tabbed Browsing, and Screen Reading</h2>
 
       <p>
