trying to clear those errors!

--- a/indexPages/finalProject.html
+++ b/indexPages/finalProject.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="UDfinalProject" class="UDfinalProjectContent" role="region">
+    <main id="UDfinalProject" class="UDfinalProjectContent">
       <h2 class="normalHeader">Universal Design Final Project</h2>
 
       <p>
