--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <main id="aboutMe" class="aboutMePageContent" role="region">
+    <main id="aboutMe" class="aboutMePageContent">
       <h2>About Me</h2>
 
       <figure>
